# challenge2-image-api

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CI_CD.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docker-publish.yml
app/: __init__.py  main.py  middleware.py
app/api/: __init__.py  models.py  routes.py
app/cli/: ingest.py
app/core/: __init__.py  cache.py  config.py  logging.py
app/db/: __init__.py  models.py  operations.py  session.py
app/processing/: __init__.py  image.py  ingest.py
docs/: api_endpoints_implementation.md
scripts/: benchmark.py  ingest.py  test_processing.py  visualize_colormap.py  visualize_resize.py
tests/: test_api.py  test_api_advanced.py  test_api_models.py  test_api_routes_advanced.py  test_cache.py  test_cli_ingest.py  test_colormap.py  test_coverage_completion.py  test_db_operations.py  test_image_processing.py  test_processing_ingest.py  test_resize.py
