[tool.poetry]
name = "aiq-depth-frames-api"
version = "0.1.0"
description = "Python Image Frames API - Process and serve depth-keyed grayscale image frames with custom colorization"
authors = ["AIQ Backend Engineer <engineer@aiq.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
aiosqlite = "^0.19.0"
pandas = "^2.2.0"
numpy = "^2.0.0"
pillow = "^11.0.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
orjson = "^3.9.13"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.4"
httpx = "^0.26.0"
pytest-cov = "^4.1.0"
black = "^24.1.1"
ruff = "^0.14.4"
mypy = "^1.8.0"

[tool.poetry.group.test.dependencies]
# Test dependencies only

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "E402",  # module level import not at top of file (needed for app setup)
    "C901",  # function is too complex (acceptable in some cases)
    "B904",  # raise from within except (acceptable in some cases)
    "E722",  # bare except (acceptable in scripts)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing --cov-report=html"
